--- a/registration_number.css
+++ b/registration_number.css
@@ -1,6 +1,55 @@
 body {
-background-image: url("https://www.clipartsgram.com/image/1127858435-background-images-for-websites-24.jpg");
+background-color: khaki;
 
 vertical-align: middle;
 
+}
+.numplate{
+  background-color: yellow;
+  border:solid black;
+  border-radius: 5px;
+  width: 200px;
+  text-align: center;
+
+}
+button {
+text-align: center;
+
+width: 50px;
+height: 50px;
+
+
+}
+border {
+  vertical-align: middle;
+  background-color: yellow;
+  width: 600px;
+  border-radius: 30px;
+  border: solid black;
+  padding: 25px;
+  margin: auto;
+
+
+}
+input {
+height: 20px;
+width: 500px;
+text-align: center;
+padding: 25px
+
+}
+
+
+
+
+
+h1 {
+text-align: center;
+
+}
+
+
+textbox {
+text-align: center;
+float: left;
 }
